syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package balance;

option java_package = "com.example.demo.balance";
option java_multiple_files = true;

message Account {
  int64 id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string created_by = 3 [json_name = "created_by"];
  google.protobuf.Timestamp created_date = 4 [json_name = "created_date"];
  string last_modified_by = 5 [json_name = "last_modified_by"];
  google.protobuf.Timestamp last_modified_date = 6 [json_name = "last_modified_date"];
}

message CreateAccountRequest {
  string name = 1 [json_name = "name"];
}

message CreateAccountResponse {
  int64 id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string created_by = 3 [json_name = "created_by"];
  google.protobuf.Timestamp created_date = 4 [json_name = "created_date"];
  string last_modified_by = 5 [json_name = "last_modified_by"];
  google.protobuf.Timestamp last_modified_date = 6 [json_name = "last_modified_date"];
}

service AccountService {
  // unary
  rpc getAll() returns (Account) {};
}