syntax = "proto3";

import "google/protobuf/timestamp.proto";

package balance;

option java_package = "com.example.demo.error";
option java_multiple_files = true;

enum ErrorCode {
  UNKNOWN = 0;
  BAD_REQUEST = 1;
  NOT_FOUND = 2;
}

message ErrorResponse {
  google.protobuf.Timestamp timestamp = 1;
  ErrorCode error_code = 2;
}